# wind_farm_radar_evaluation

./: .gitignore  Dockerfile  README.md  config.yaml  create_project.sh  entry_point.sh  entry_point_expert.sh  pyproject.toml  start_dev_container.sh  start_radar_experter.sh
conf/: config.yaml  config_dev.yaml
data/: turbine_coordinates.csv
digital_rf_battlefield_web/: DEPLOYMENT.md  README.md  entry_point.sh  oscilloscope_reactpy.py  pyproject.toml  requirements.txt  start_app.py  startup.sh  🛰️ 数字射频战场仿真系统.py
digital_rf_battlefield_web/.streamlit/: config.toml
digital_rf_battlefield_web/assets/css/: custom.css
digital_rf_battlefield_web/backend/: api_server.py  models.py  simulation_engine.py
digital_rf_battlefield_web/components/: cards.py  header.py  maps.py  sidebar.py
digital_rf_battlefield_web/config/: default_config.json  radar_templates.json  target_templates.json
digital_rf_battlefield_web/data/radar_configs/: 雷达配置_20260116_074551.json
digital_rf_battlefield_web/data/simulation_configs/: 仿真配置_20260116_081017.json  仿真配置_20260116_081444.json
digital_rf_battlefield_web/pages/: 1_🏠_概览.py  2_🎯_想定生成.py  3_📡_雷达配置.py  4_🛰️_目标配置.py  5_⚙️_仿真配置.py  6_🚀_仿真运行.py  7_📊_结果可视化.py  8_📈_性能评估.py
digital_rf_battlefield_web/utils/: data_processor.py  kimi_api.py  simulation_api.py  style_utils.py
docs/: installation.md  usage.md
dyt/: app.py
dyt/modules/core/: advanced_features_module.py  core_module.py  main_application_module.py  map_visualization_module.py  run_app.py  simulation_control_module.py  simulation_data.db
ew-combat-system/: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  app.py  app_1.py  app_plt.py  app_with_sidebar.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.bat  start.sh  🛡️电子战对抗仿真系统.py
ew-combat-system/.streamlit/: config.toml
ew-combat-system/config/: environment.yaml.example  logging.yaml  logging.yaml.example  radar_database.yaml.example  scenarios.yaml  scenarios.yaml.example
ew-combat-system/deployment/kubernetes/: deployment.yaml  ingress.yaml
ew-combat-system/docs/api/: index.md
ew-combat-system/docs/guide/: getting_started.md
ew-combat-system/examples/: basic_usage.py  example_scenario.json
ew-combat-system/nginx/: nginx.conf
ew-combat-system/notebooks/: EW_Simulation_Demo.ipynb
ew-combat-system/pages/: 1_📡相控阵天线波束成形仿真器.py  1_📶天线波束成形仿真专题.py  2_⚡雷达参数优化专家系统.py  3_📊雷达回波信号专题仿真.py  4_🚀 导引头电子战专题仿真.py  5_👁‍🗨 空中目标专题仿真.py  6_🛡️ 智能干扰资源分配和协同对抗仿真.py  7_📡 Ku波段32x32相控阵雷达波束成形仿真.py  7_📡 主流军用相控阵雷达波束成形仿真系统.py  7_📡 军用相控阵雷达全链路仿真与效能评估平台.py
ew-combat-system/simulations/: radar_station_database.yaml
ew-combat-system/src/: test_combat_analysis.py  test_coteja_integration.py  test_epde_optimization.py
ew-combat-system/src/config/: coteja_config.yaml
ew-combat-system/src/core/: factory.py
ew-combat-system/src/core/analysis/: combat_analyzer.py  combat_tables.py
ew-combat-system/src/core/assessment/: __init__.py
ew-combat-system/src/core/entities/: __init__.py  radar_enhanced.py  target.py
ew-combat-system/src/core/optimization/: epde_algorithm.py  optimization_controller.py  result_analyzer.py
ew-combat-system/src/core/patterns/: factory.py  observer.py  strategy.py
ew-combat-system/src/core/simulation/: __init__.py  propagation.py
ew-combat-system/src/tests/performance/: test_performance.py
ew-combat-system/src/tests/unit/: test_entities.py  test_patterns.py  test_simulation.py
ew-combat-system/src/ui/: components.py
ew-combat-system/src/utils/: __init__.py  config_loader.py  config_manager.py  data_manager.py  data_serializer.py  logger.py
ew-combat-system/src/visualization/: geoviz.py
ew-combat-system/static/css/: custom.css
ew-combat-system/static/js/: custom.js
ew-combat-system/tests/integration/: test_integration.py
examples/: basic_usage.py
notebooks/: 2.ipynb
scripts/: run_evaluation.sh  setup_environment.sh
src/radar_factory_app/: README.md  app.py  ew_simulation_app.py  radar_designer.py  radar_designer_ok.py  radar_designer_simple.py  radar_station_manager.py  requirements.txt
src/radar_factory_app/controllers/: radar_controller.py  test_x_band.py  test_x_band_simple.py
src/radar_factory_app/models/: radar_models.py  simulation_models.py
src/radar_factory_app/services/: cfar_processor.py  detection_evaluator.py  performance_calculator.py  radar_plotter.py  radar_plotter_enhance.py  radar_simulator.py  radar_simulator000.py  target_matching.py
src/radar_factory_app/utils/: constants.py  helpers.py
src/radar_factory_app/views/: comparison_view.py  dashboard.py  radar_editor.py  simulation_view.py
src/wind_farm_radar_evaluation/: __init__.py  cr.sh  data_models.py  main.py  numpy_streamlit.py  parabolic_antenna_simulator_web.py  phased_array_simulator_web.py
src/wind_farm_radar_evaluation/antenna_analysis_platform/: Dockerfile  app.py  app2.py  docker-compose.yml  init_project.py
tests/integration/: test_system.py
tests/unit/: test_configuration.py
windfarm_radar_app/: entry_point.sh  main.py  pyproject.toml  startup.sh  风场快评首页.py  风雷快评首页.py
windfarm_radar_app/.streamlit/: config.toml
windfarm_radar_app/pages/: 10_📊 radar_impact_analyzer.py  10_📊 radar_impact_analyzer_black.py  1_📐 风电场建模.py  2_📡 雷达参数配置.py  3_🎯 目标设置.py  4_📊 探测影响分析.py  5_👁️ 三维可视化.py  6_🌍 雷达覆盖分析.py  7_🗺️ radar_impact_analyzer1.py  8_🌊 radar_impact_analyzer.py  9_🌬️ 实验版本三.py
windfarm_radar_app/pages2/: 1_场景配置.py  2_场景可视化.py  3_雷达性能分析.py  4_报告生成.py
windfarm_radar_app/utils/: radar_calculations.py  report_generator_temp.py  yaml_loader.py
windfarm_radar_app_new/: entry_point.sh  main.py  pyproject.toml  startup.sh  🌪️风雷快评首页.py
windfarm_radar_app_new/config/: config.py
windfarm_radar_app_new/examples/: wind_farm_scenario_example.yaml
windfarm_radar_app_new/pages/: 1_场景配置.py  1_📁 场景配置.py  2_场景可视化.py  2_🗺️ 场景可视化.py  3_雷达性能分析.py  3_📡 雷达性能分析.py  4_报告生成.py  4_📊 报告生成.py
windfarm_radar_app_new/utils/: radar_calculations.py  report_generator.py  visualization.py  yaml_loader.py
(+38 files in other folders)
