[project]
name = "wind-farm-radar-evaluation"
version = "0.1.0"
description = "风电场对海岸监视雷达影响评估系统"
authors = [
    {name = "ten2net", email = "ten2net@163.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.25.0",
    "numpy>=1.24.0",
    "scipy>=1.9.0",
    "trimesh>=3.15.0",  
    "lark>=1.2.2",
    "pandas>=2.3.1",
    "matplotlib>=3.7.2",
    "plotly>=6.2.0",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0.1",
    "pymeshlab==2022.2", 
    "pyvista>=0.36.0",
    "meshio>=5.0.0",
    "kaleido==1.0.0",
    "nbformat>=4.2.0",    
    "reportlab>=4.2.5",
    "seaborn>=0.12.2",
    "ipykernel>=6.25.0",
    "shapely==2.1.2",
    "geopandas==1.1.2",
    "folium==0.20.0",
    "streamlit-folium==0.26.1",
    "markdown==3.10",
    "openpyxl==3.1.5",
    "reactpy==1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ipykernel<=7.0.0a2"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/ten2net/wind-farm-radar-evaluation"
Repository = "https://github.com/ten2net/wind-farm-radar-evaluation"
Documentation = "https://ten2net.github.io/wind-farm-radar-evaluation"

[project.scripts]
main = "wind_farm_radar_evaluation:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wind_farm_radar_evaluation"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --cov=src/wind_farm_radar_evaluation --cov-report=html"
